finish openapi implementation
